<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="40dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_cibertec_fondo_blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/text_email_login"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <EditText
        android:id="@+id/textPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEmailLogin"
        android:layout_marginTop="10dp"
        android:hint="@string/text_password_login"
        app:layout_constraintTop_toBottomOf="@id/textEmailLogin"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_login_login"
        app:layout_constraintTop_toBottomOf="@id/textPasswordLogin"
        android:textAllCaps="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnLoginLogin"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple"
        android:text="@string/btn_register_login"
        app:layout_constraintTop_toBottomOf="@id/btnLoginLogin"
        android:textAllCaps="true" />


</androidx.constraintlayout.widget.ConstraintLayout>