<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:padding="40dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_cibertec_fondo_blanco" />

    <EditText
        android:id="@+id/textEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="25dp"
        android:hint="@string/text_email_login"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/textPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEmailLogin"
        android:layout_marginTop="10dp"
        android:hint="@string/text_password_login"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textPasswordLogin"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_login_login"
        android:textAllCaps="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnLoginLogin"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple"
        android:text="@string/btn_register_login"
        android:textAllCaps="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="Create"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        />


</RelativeLayout>