<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp"
    android:paddingVertical="40dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/bembos_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/text_email_login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/text_email_login"
        android:inputType="textEmailAddress"
        android:outlineProvider="bounds"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/textEmailLogin" />

    <TextView
        android:id="@+id/textPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_email_login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etEmailLogin" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEmailLogin"
        android:layout_marginTop="5dp"
        android:hint="@string/text_password_login"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/textPasswordLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/btn_login_login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btnRegisterLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegisterLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/btnLoginLogin"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_register_login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnLoginLogin"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLogin" />

    <TextView
        android:id="@+id/textRecoverPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/recover_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLoginLogin" />

    <TextView
        android:id="@+id/textLoginWithSocialMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRecoverPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_login_google_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textLoginWithSocialMedia" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnLoginLogin"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue_facebook"
        android:textAllCaps="false"
        android:text="@string/btn_login_facebook_login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnLoginGoogleLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>