<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp"
    android:paddingVertical="40dp">

    <TextView
        android:id="@+id/textProductsProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/text_products_products"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBurguerColorada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textProductsProducts">

        <ImageView
            android:id="@+id/imgBurguerColorada"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/plato"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="7dp"
            android:src="@drawable/favorito"
            app:layout_constraintLeft_toLeftOf="@id/imgBurguerColorada"
            app:layout_constraintTop_toTopOf="@id/imgBurguerColorada" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textBurguerColorada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burguer_colorada"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burguer_colorada_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_goneMarginLeft="25dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddBurguerColorada"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_add_products"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBurguerColorada" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBurguerHawaiana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBurguerColorada">

        <ImageView
            android:id="@+id/imgBurguerHawaiana"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/plato"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="7dp"
            android:src="@drawable/favorito"
            app:layout_constraintLeft_toLeftOf="@id/imgBurguerHawaiana"
            app:layout_constraintTop_toTopOf="@id/imgBurguerHawaiana" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textBurguerHawaiana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burguer_colorada"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burguer_colorada_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_goneMarginLeft="25dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddBurguerHawaiana"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_add_products"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBurguerHawaiana" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBurguerDoble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBurguerHawaiana">

        <ImageView
            android:id="@+id/imgBurguerDoble"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/plato"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="7dp"
            android:src="@drawable/favorito"
            app:layout_constraintLeft_toLeftOf="@id/imgBurguerDoble"
            app:layout_constraintTop_toTopOf="@id/imgBurguerDoble" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textBurguerDoble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burguer_colorada"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burguer_colorada_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_goneMarginLeft="25dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddBurguerDoble"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_add_products"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBurguerDoble" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>